# powermetering

./: .gitignore  ADE9000.lib  README.md  fp-lib-table  hv_supply.sch  phy_plug.sch  powermetering-cache.lib  powermetering.kicad_pcb  powermetering.kicad_pcb-bak  powermetering.lib  powermetering.pro  powermetering.sch  stm32.sch  sym-lib-table
software/powermetering/: CMakeLists.txt  Makefile  STM32F407VGTx_FLASH.ld  arm-none-eabi-gcc.cmake  powermetering.ioc
software/powermetering/Core/Inc/: ADE9000.h  FreeRTOSConfig.h  SEGGER_RTT.h  SEGGER_RTT_Conf.h  ade.h  config.h  dmr.h  fwupdate.h  influx.h  main.h  mqtt_client.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  usart.h  ustime.h
software/powermetering/Core/Src/: SEGGER_RTT.c  SEGGER_RTT_printf.c  ade.c  config.c  dmr.c  freertos.c  fwupdate.c  gpio.c  i2c.c  influx-count.c  influx.c  main.c  mqtt.c_disabled  mqtt_client.c  sdio.c  spi.c  stm32f4xx_it.c  syscalls.c  system_stm32f4xx.c  usart.c  ustime.c  version.c  version_stmbl.c
software/powermetering/Drivers/CMSIS/DAP/Firmware/Config/: DAP_config.h
software/powermetering/Drivers/CMSIS/DAP/Firmware/Include/: DAP.h
software/powermetering/Drivers/CMSIS/DAP/Firmware/Source/: DAP.c  DAP_vendor.c  SWO.c  UART.c
software/powermetering/Drivers/CMSIS/DSP/ComputeLibrary/Include/: NEMath.h
software/powermetering/Drivers/CMSIS/DSP/Include/: arm_common_tables_f16.h  arm_const_structs_f16.h  arm_helium_utils.h  arm_math_f16.h  arm_math_memory.h  arm_math_types.h  arm_math_types_f16.h  arm_mve_tables.h  arm_mve_tables_f16.h  arm_vec_math.h  arm_vec_math_f16.h
software/powermetering/Drivers/CMSIS/DSP/Include/dsp/: basic_math_functions.h  basic_math_functions_f16.h  bayes_functions.h  bayes_functions_f16.h  complex_math_functions.h  complex_math_functions_f16.h  controller_functions.h  controller_functions_f16.h  distance_functions.h  distance_functions_f16.h  fast_math_functions.h  fast_math_functions_f16.h  filtering_functions.h  filtering_functions_f16.h  interpolation_functions.h  interpolation_functions_f16.h  matrix_functions.h  matrix_functions_f16.h  none.h  quaternion_math_functions.h  statistics_functions.h  statistics_functions_f16.h  support_functions.h  support_functions_f16.h  svm_defines.h  svm_functions.h  svm_functions_f16.h  transform_functions.h  transform_functions_f16.h  utils.h
software/powermetering/Drivers/CMSIS/DSP/PrivateInclude/: arm_sorting.h  arm_vec_fft.h  arm_vec_filtering.h
software/powermetering/Drivers/CMSIS/DSP/Source/: CMakeLists.txt  configDsp.cmake  fft.cmake  interpol.cmake
software/powermetering/Drivers/CMSIS/DSP/Source/BasicMathFunctions/: BasicMathFunctions.c  BasicMathFunctionsF16.c  CMakeLists.txt  arm_abs_f16.c  arm_abs_f64.c  arm_add_f16.c  arm_add_f64.c  arm_and_u16.c  arm_and_u32.c  arm_and_u8.c  arm_clip_f16.c  arm_clip_f32.c  arm_clip_q15.c  arm_clip_q31.c  arm_clip_q7.c  arm_dot_prod_f16.c  arm_dot_prod_f64.c  arm_mult_f16.c  arm_mult_f64.c  arm_negate_f16.c  arm_negate_f64.c  arm_not_u16.c  arm_not_u32.c  arm_not_u8.c  arm_offset_f16.c  arm_offset_f64.c  arm_or_u16.c  arm_or_u32.c  arm_or_u8.c  arm_scale_f16.c  arm_scale_f64.c  arm_sub_f16.c  arm_sub_f64.c  arm_xor_u16.c  arm_xor_u32.c  arm_xor_u8.c
software/powermetering/Drivers/CMSIS/DSP/Source/BayesFunctions/: BayesFunctionsF16.c  CMakeLists.txt  arm_gaussian_naive_bayes_predict_f16.c  arm_gaussian_naive_bayes_predict_f32.c
software/powermetering/Drivers/CMSIS/DSP/Source/CommonTables/: CMakeLists.txt  CommonTablesF16.c  arm_common_tables_f16.c  arm_const_structs_f16.c  arm_mve_tables.c  arm_mve_tables_f16.c
software/powermetering/Drivers/CMSIS/DSP/Source/ComplexMathFunctions/: CMakeLists.txt  ComplexMathFunctions.c  ComplexMathFunctionsF16.c  arm_cmplx_conj_f16.c  arm_cmplx_dot_prod_f16.c  arm_cmplx_mag_f16.c  arm_cmplx_mag_f64.c  arm_cmplx_mag_fast_q15.c  arm_cmplx_mag_squared_f16.c  arm_cmplx_mag_squared_f64.c  arm_cmplx_mult_cmplx_f16.c  arm_cmplx_mult_cmplx_f64.c  arm_cmplx_mult_real_f16.c
software/powermetering/Drivers/CMSIS/DSP/Source/ControllerFunctions/: CMakeLists.txt  ControllerFunctions.c
software/powermetering/Drivers/CMSIS/DSP/Source/DistanceFunctions/: CMakeLists.txt  DistanceFunctions.c  DistanceFunctionsF16.c  arm_boolean_distance.c  arm_boolean_distance_template.h  arm_braycurtis_distance_f16.c  arm_braycurtis_distance_f32.c  arm_canberra_distance_f16.c  arm_canberra_distance_f32.c  arm_chebyshev_distance_f16.c  arm_chebyshev_distance_f32.c  arm_chebyshev_distance_f64.c  arm_cityblock_distance_f16.c  arm_cityblock_distance_f32.c  arm_cityblock_distance_f64.c  arm_correlation_distance_f16.c  arm_correlation_distance_f32.c  arm_cosine_distance_f16.c  arm_cosine_distance_f32.c  arm_cosine_distance_f64.c  arm_dice_distance.c  arm_euclidean_distance_f16.c  arm_euclidean_distance_f32.c  arm_euclidean_distance_f64.c  arm_hamming_distance.c  arm_jaccard_distance.c  arm_jensenshannon_distance_f16.c  arm_jensenshannon_distance_f32.c  arm_kulsinski_distance.c  arm_minkowski_distance_f16.c  arm_minkowski_distance_f32.c  arm_rogerstanimoto_distance.c  arm_russellrao_distance.c  arm_sokalmichener_distance.c  arm_sokalsneath_distance.c  arm_yule_distance.c
software/powermetering/Drivers/CMSIS/DSP/Source/FastMathFunctions/: CMakeLists.txt  FastMathFunctions.c  FastMathFunctionsF16.c  arm_atan2_f16.c  arm_atan2_f32.c  arm_atan2_q15.c  arm_atan2_q31.c  arm_divide_q15.c  arm_divide_q31.c  arm_vexp_f16.c  arm_vexp_f32.c  arm_vexp_f64.c  arm_vinverse_f16.c  (+5 more)
software/powermetering/Drivers/CMSIS/NN/: .clang-format  CMakeLists.txt
software/powermetering/Drivers/CMSIS/NN/Include/: arm_nn_math_types.h  arm_nn_types.h
software/powermetering/Drivers/CMSIS/NN/Source/: CMakeLists.txt
software/powermetering/Drivers/STM32F4xx_HAL_Driver/: Release_Notes.html
software/powermetering/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_eth.c
software/powermetering/FATFS/App/: fatfs.c
software/powermetering/LWIP/App/: lwip.c
software/powermetering/MBEDTLS/App/: mbedtls.c  mbedtls.h  mbedtls_config.h  net_sockets.c
software/powermetering/USB_DEVICE/App/: usbd_desc.c
(+379 files in other folders)
